<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/account_delete_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/account_delete_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/paragraph_margin"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_scrollable_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paragraph_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/change_name">

                <EditText
                    android:id="@+id/input_change_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_input_change_layout"
                android:hint="@string/change_password">

                <EditText
                    android:id="@+id/input_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.arpadfodor.communityparking.android.app.view.utils.AppButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AppButton"
                android:text="@string/cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/glVerticalMiddle"
                app:layout_constraintTop_toBottomOf="@id/password_input_change_layout"/>

            <com.arpadfodor.communityparking.android.app.view.utils.AppPositiveButton
                android:id="@+id/btnApply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AppButton"
                android:text="@string/apply"
                app:layout_constraintStart_toStartOf="@+id/glVerticalMiddle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_change_layout"/>

            <TextView android:id="@+id/linkDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_vertical"
                android:text="@string/delete_account"
                android:gravity="center"
                style="@style/Subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnApply"/>

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/glVerticalMiddle"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>